fix completely the logo position + overflow issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,7 +130,7 @@ a {
 }
 
 .nav-smallscreen {
-  position: fixed;
+  position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
   top: 66px;
@@ -249,7 +249,7 @@ a {
 // to home button -------------
 .to-home {
   position: absolute;
-  top: 40px;
+  top: 100px;
   left: 4%;
   color: black;
 }
@@ -408,9 +408,9 @@ footer {
 
 // form------------
 #form {
+  position: relative;
   overflow: hidden;
-  width: 100vw;
-
+  padding-top: 70px;
   &:before {
     position: absolute;
     content: "";
@@ -425,9 +425,6 @@ footer {
   }
 
   .container {
-    margin-top: 70px;
-    padding-top: 30px;
-
     max-width: 1100px;
     border-bottom: none;
     display: flex;
@@ -539,7 +536,7 @@ footer {
 }
 // contact page -----------------------
 #contact {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 // about page ---------------------------------
@@ -547,8 +544,19 @@ footer {
 #about {
   position: relative;
   padding-top: 66px;
-  overflow: hidden;
-
+  // overflow: hidden;
+  &:before {
+    position: absolute;
+    content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../images/logo.jpg");
+    right: 70px;
+    top: 50px;
+    height: 400px;
+    width: 400px;
+    z-index: -1;
+  }
   .about-content {
     @extend %centered-flex;
     flex-direction: column;
@@ -563,19 +571,6 @@ footer {
     p {
       width: 70%;
       align-self: center;
-    }
-
-    &:before {
-      position: absolute;
-      content: "";
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-image: url("../images/logo.jpg");
-      right: 0;
-      top: 50px;
-      height: 400px;
-      width: 400px;
-      z-index: -1;
     }
   }
 }
@@ -746,12 +741,10 @@ footer {
     }
   }
   #about {
-    .about-content {
-      &::before {
-        opacity: 0.4;
-        right: -120px;
-        top: -90px;
-      }
+    &::before {
+      opacity: 0.4;
+      right: -120px;
+      top: -90px;
     }
   }
   #form {
